syntax = "proto3";

package InfinityNetServer.BuildingBlocks.Application.Protos;

option csharp_namespace = "InfinityNetServer.BuildingBlocks.Application.Protos";

import "google/protobuf/empty.proto";

message IntrospectRequest {
  string token = 1;
}

message IntrospectResponse {
  bool valid = 1;
}

message GetAccountIdRequest {
	string defaultUserProfileId = 1;
}

message GetAccountIdResponse {
	string id = 1;
}

message GetAccountIdsResponse {
	repeated string ids = 1;
}

message AccountWithDefaultProfile {
	string id = 1;
	string defaultUserProfileId = 2;
}

message GetAccountsWithDefaultProfilesResponse {
  repeated AccountWithDefaultProfile accountsWithDefaultProfiles = 1;
}

service IdentityService {

  rpc introspect(IntrospectRequest) returns (IntrospectResponse) {}

  rpc getAccountId (GetAccountIdRequest) returns (GetAccountIdResponse) {}

  rpc getAccountIds (google.protobuf.Empty) returns (GetAccountIdsResponse) {}

  rpc getAccountsWithDefaultProfiles (google.protobuf.Empty) returns (GetAccountsWithDefaultProfilesResponse) {}

}
